Avance dia 25/11 concluido. continuar luego

--- a/SisGestionCafeteriaBuenGranito/SisGestionCafeteriaBuenGranito.csproj
+++ b/SisGestionCafeteriaBuenGranito/SisGestionCafeteriaBuenGranito.csproj
@@ -129,5 +129,23 @@
   <ItemGroup>
     <None Include="Resources\WhatsApp Image 2025-11-25 at 10.01.39 PM.jpeg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-11-25 at 10.03.00 PM.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-11-25 at 10.05.04 PM.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-11-25 at 10.06.31 PM.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-11-25 at 10.07.44 PM.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-11-25 at 10.15.36 PM.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-11-25 at 10.22.21 PM.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
