--- a/SisGestionCafeteriaBuenGranito/App.config
+++ b/SisGestionCafeteriaBuenGranito/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+
+	<connectionStrings>
+		<add name="CadenaConexion"
+             connectionString="Data Source=DESKTOP-4GEUIJE\SQLEXPRESS;Initial Catalog=DB_BuenGranito;Integrated Security=True"
+             providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
 </configuration>
