Conexion FrmCaja con DB, Configuracion de botones, creador de buscador, ademas de otras caracteristicas añadidas.

--- a/SisGestionCafeteriaBuenGranito/SisGestionCafeteriaBuenGranito.csproj
+++ b/SisGestionCafeteriaBuenGranito/SisGestionCafeteriaBuenGranito.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminLogica.cs" />
+    <Compile Include="CajaLogica.cs" />
     <Compile Include="ConexionDB.cs" />
     <Compile Include="FrmAdmin.cs">
       <SubType>Form</SubType>
