--- a/SisGestionCafeteriaBuenGranito/App.config
+++ b/SisGestionCafeteriaBuenGranito/App.config
@@ -6,7 +6,7 @@
 
 	<connectionStrings>
 		<add name="CadenaConexion"
-             connectionString="Data Source=DESKTOP-4GEUIJE\SQLEXPRESS;Initial Catalog=DB_BuenGranito;Integrated Security=True"
+             connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DB_BuenGranito;Integrated Security=True"
              providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
