--- a/SisGestionCafeteriaBuenGranito/SisGestionCafeteriaBuenGranito.csproj
+++ b/SisGestionCafeteriaBuenGranito/SisGestionCafeteriaBuenGranito.csproj
@@ -180,5 +180,8 @@
   <ItemGroup>
     <None Include="Resources\WhatsApp Image 2025-11-25 at 10.22.21 PM.jpeg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FondoCafe.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
